--- a/app/src/main/res/layout/activity_kelas.xml
+++ b/app/src/main/res/layout/activity_kelas.xml
@@ -74,7 +74,16 @@
                     android:textSize="30dp"
                     android:textStyle="bold" />
                 <TextView
-                    android:id="@+id/txtkelas2"
+                    android:id="@+id/txtkelas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:textColor="?attr/colorOnSecondary"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txtkelas3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
