--- a/app/src/main/res/layout/activity_kelas.xml
+++ b/app/src/main/res/layout/activity_kelas.xml
@@ -91,6 +91,15 @@
                     android:textColor="?attr/colorOnSecondary"
                     android:textSize="30dp"
                     android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txtkelas7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:textColor="?attr/colorOnSecondary"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
